--- a/maps.html
+++ b/maps.html
@@ -16,21 +16,35 @@
 
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.3.0/localforage.min.js"></script>
   <script src="maps.js"></script>
 </head>
 <body>
   <div class="container">
     <div id="dsripMapsHead">
-      <h2> Maps for DSRIP </h2>
+      <h3>
+        <a href="http://www.stonybrook.edu" target=_blank>
+          <img src="sbu.jpeg" height="63px" style="vertical-align:bottom">
+        </a>
+          <i style="font-family:Palatino;color:maroon">
+            <a href="http://bmi.stonybrookmedicine.edu" target="_blank" style="color:maroon">Maps for DSRIP</a>
+            <a href="https://github.com/SBU-BMI" target="_blank">
+              <i class="fa fa-github-alt" style="color:maroon"></i>
+            </a>
+          </i>
+      </h3>
     </div>
     <div id="dsripMapsMsg">
-      ... msg ...
+      Hi Janos, first prototype created in a hurry ... start by selecting your ACSxxxx.csv file
     </div>
     <div id="dsripMapsAction">
-      ... action ...
+
     </div>
     <div id="dsripMapsFoot">
-      ... foot ...
+      using cross-platform, cross-language open source <a href="https://plot.ly/" target="_blank">plot.ly</a>  
     </div>
 
 
