--- a/maps.html
+++ b/maps.html
@@ -20,6 +20,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.3.0/localforage.min.js"></script>
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+  <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
   <script src="maps.js"></script>
 </head>
 <body>
@@ -44,7 +46,7 @@
 
     </div>
     <div id="dsripMapsFoot">
-      using cross-platform, cross-language open source <a href="https://plot.ly/" target="_blank">plot.ly</a>  
+      using cross-platform, cross-language open source <a href="https://plot.ly/" target="_blank">plot.ly</a>
     </div>
 
 
