--- a/maps.html
+++ b/maps.html
@@ -11,6 +11,9 @@
  <meta name="mobile-web-app-capable" content="yes">
  <meta name="apple-mobile-web-app-capable" content="yes">
  <link rel="manifest" href="manifestW3.json">
+ <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+ <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.3.0/localforage.min.js"></script>
  -->
 
 
@@ -19,9 +22,6 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.3.0/localforage.min.js"></script>
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-  <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
   <script src="maps.js"></script>
 </head>
 <body>
@@ -43,7 +43,8 @@
       Hi Janos, first prototype created in a hurry ... start by selecting your ACSxxxx.csv file
     </div>
     <div id="dsripMapsAction">
-
+    </div>
+    <div id="dsripMapsStats">
     </div>
     <div id="dsripMapsFoot">
       using cross-platform, cross-language open source <a href="https://plot.ly/" target="_blank">plot.ly</a>
