--- a/maps.html
+++ b/maps.html
@@ -40,7 +40,7 @@
       </h3>
     </div>
     <div id="dsripMapsMsg">
-      Hi Janos, first prototype created in a hurry ... start by selecting your ACSxxxx.csv file
+      Hi Janos, first prototype ... start by selecting your ACSxxxx.csv file
     </div>
     <div id="dsripMapsAction">
     </div>
